[package]
name = "solana-deposit-withdraw"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.10.2"
arrayref = "0.3.6"

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.10.2"
solana-sdk = "=1.10.2"
solana-validator = "=1.10.2"
solana-logger = "=1.10.2"

[lib]
crate-type = ["cdylib", "lib"]
